# experiments

./: README.md
ffhq/: README.md  download_ffhq.py
includes/: README.md
itunes_presenter/: item.py  itunes.py  main.py
kohonen-sound/: .gitignore  color_main.py  colorsource.py  hexgrid.py  image_main.py  imagesource.py  kohonen.py  main.py  plot.py  requirements.txt  soundfile.py  to_video.sh
lifesim/: README.md
non-line-of-sight/: loadmat.py  main.py  requirements.txt  url.txt
ray-tracer/: dale_rewrite.cpp  dale_thomas_example.cpp
ray-tracer/bvh_tests/: aabb.py  aabb_longest_axis_split.py  bvh.py  geometry.py  objects.py
ray-tracer/python_tracer/: rt2.py
ray-tracer/ray-march/: fixed_point.c  fixed_point.h  signed_distance_functions.c  test_fixed_point.c
ray-tracer/render_farm/: README.md  config.json  fake_render.py  jobs_handler.py  main.py  rest_api.py
ray-tracer/tutorial_in_a_weekend/: CMakeLists.txt  Makefile  camera.hpp  camera.json  color.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ppm.cpp  ppm.hpp  ray.hpp  render.json  rtweekend.hpp  sphere.hpp  tqdm.hpp  vec3.hpp  world.json
ray-tracer/tutorial_in_a_weekend/python/: main.py  plane.py  point.py  ray.py  vector.py
ray-tracer/tutorial_in_a_weekend/src/: aabb.cpp  aabb.hpp  aarect.cpp  aarect.hpp  box.cpp  box.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  config.cpp  config.hpp  constant_medium.cpp  constant_medium.hpp  constants.hpp  greenmeadow.h  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  image_plane.hpp  main.cpp  main_scene.cpp  material.cpp  material.hpp  moving_sphere.cpp  moving_sphere.hpp  onb.cpp  onb.hpp  pdf.cpp  pdf.hpp  perlin.cpp  perlin.hpp  png.cpp  png.hpp  ppm.cpp  ray.cpp  ray.hpp  (+18 more)
utilities/: csvq
